# EmptyCppProject

./: .gitignore  CMakeLists.txt  banana.cpp  common.cpp  common.h
lib/: CMakeLists.txt
